studentdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: studentapp
  labels:
    app: studentapp
spec: 
  replicas: 1
  strategy: 
    type: RollingUpdate
  selector:  # Moved selector here
    matchLabels:
      app: studentapp
  template:
    metadata: 
      labels:
        app: studentapp          
    spec: 
      containers: 
        - name: student-container
          image: fazilassayyed/student:latest
          resources: 
            requests:
              cpu: "25m"
              memory: "50Mi"
            limits:
              cpu: "50m"
              memory: "100Mi"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
