studentservice.yml
apiVersion: v1
kind: Service
metadata: 
     name: loadbalancer
spec: 
  selector: 
       app: studentapp
  type: LoadBalancer     
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: studentapp
