todoservice.yml
apiVersion: v1
kind: Service
metadata: 
     name: loadbalancer
spec: 
  selector: 
       app: todoapp
  type: LoadBalancer     
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: todoapp
