ingresscontroller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: a00cdfa3de5314dfe96168cf06e07103-80138960.us-east-1.elb.amazonaws.com
    http:
      paths:
       - path: /
            pathType: Prefix
            backend:
              service: 
                name: todoapp
                port:
                  number: 80
       - path: /student
            pathType: Prefix
            backend:
              service: 
                name: studentapp
                port:
                  number: 8080
